refactor(view): 입력 및 출력 뷰 코드 정리
- LottoInputView: 입력 검증 로직 간결화
- LottoOutputView: 출력 메시지 구조 정리