@@ -1,45 +1,34 @@
 package lotto.presentation.view;
 
 import camp.nextstep.edu.missionutils.Console;
-import lotto.domain.model.ErrorMessages;
+import java.util.stream.Collectors;
 import lotto.domain.model.WinningNumbers;
 
 import java.util.Arrays;
 import java.util.List;
+import lotto.domain.service.ValidationService;
 
 //사용자 입력을 담당하는 클래스
 public class LottoInputView {
 
     public int getPurchaseAmount() {
         System.out.println(OutputMessages.REQUEST_PURCHASE_AMOUNT.getMessage());
-        try {
-            return Integer.parseInt(Console.readLine());
-        } catch (NumberFormatException e) {
-            System.out.println(ErrorMessages.INVALID_INPUT_FORMAT.getMessage());
-            throw new IllegalArgumentException(ErrorMessages.INVALID_INPUT_FORMAT.getMessage());
-        }
+        String input = Console.readLine();
+        return ValidationService.validatePurchaseAmount(input); // String -> int 변환 및 검증
     }
 
     public WinningNumbers getWinningNumbers() {
         System.out.println(OutputMessages.REQUEST_WINNING_NUMBERS.getMessage());
-        List<Integer> numbers;
-        try {
-            numbers = Arrays.stream(Console.readLine().split(","))
-                    .map(Integer::parseInt)
-                    .toList();
-        } catch (NumberFormatException e) {
-            throw new IllegalArgumentException(ErrorMessages.INVALID_INPUT_FORMAT.getMessage());
-        }
+
+        List<Integer> numbers = Arrays.stream(Console.readLine().split(","))
+                .map(Integer::parseInt)
+                .collect(Collectors.toList());
+        ValidationService.validateWinningNumbers(numbers); // 당첨 번호 검증
 
         System.out.println(OutputMessages.REQUEST_BONUS_NUMBER.getMessage());
-        int bonusNumber;
-        try {
-            bonusNumber = Integer.parseInt(Console.readLine());
-        } catch (NumberFormatException e) {
-            throw new IllegalArgumentException(ErrorMessages.INVALID_INPUT_FORMAT.getMessage());
-        }
+        String bonusInput = Console.readLine();
+        int bonusNumber = ValidationService.validateBonusNumber(bonusInput, numbers); // 보너스 번호 검증
 
         return new WinningNumbers(numbers, bonusNumber);
     }
 }
-
